--- a/templates/actor/items/equipped-ranged-weapons.hbs
+++ b/templates/actor/items/equipped-ranged-weapons.hbs
@@ -89,6 +89,7 @@
                   class="fakebutton"
                   class="rollable resource-label"
                   data-weapon-roll
+                  data-hailmary="true"
                   data-weapon-id="{{ item._id }}"
                   class="resource-label"
                 >
