refactor attack and targeted

--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -2,6 +2,7 @@
 @import 'base.css';
 @import 'dialog.css';
 @import 'grant.css';
+@import 'attack-roll.css';
 @import 'targeted-attack.css';
 
 /* Global styles */
@@ -921,11 +922,9 @@ form td .status-notes li:hover {
   width: 106px;
   background-image: url('/systems/arcane-arcade-fallout/assets/vaultboy/status-limbs/leg2.png');
 }
-.falloutzero .tox .tox-editor-container button{
-  background-color:white;
+.falloutzero .tox .tox-editor-container button {
+  background-color: white;
 }
-.falloutzero .tmce body{
-    color:blue;
+.falloutzero .tmce body {
+  color: blue;
 }
-
-
