--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -11,15 +11,15 @@
                        data-item-id="{{ item._id }}"
                        title="{{localize 'DOCUMENT.Update' type='item'}}">
                         {{item.name}}({{item.system.quantity}})
-                    </a>                
-                    <a class="item-control item-delete"title="{{localize 'DOCUMENT.Delete' type='item'}}">
+                    </a>
+                    <a class="item-control item-delete" title="{{localize 'DOCUMENT.Delete' type='item'}}">
                         <i class="fas fa-trash"></i>
                     </a>
                     <a style="float: right; margin-left: 10px"
-                        data-equip
-                        data-item-id="{{ item._id }}"
-                        class="item-control"
-                        title="Equip a weapon">
+                       data-equip
+                       data-item-id="{{ item._id }}"
+                       class="item-control"
+                       title="Equip a weapon">
                         <i class="fas fa-tshirt"></i>
                     </a>
                 </div>
@@ -40,10 +40,10 @@
                         <i class="fas fa-trash"></i>
                     </a>
                     <a style="float: right; margin-left: 10px"
-                        data-equip
-                        data-item-id="{{ item._id }}"
-                        class="item-control"
-                        title="Equip a weapon">
+                       data-equip
+                       data-item-id="{{ item._id }}"
+                       class="item-control"
+                       title="Equip a weapon">
                         <i class="fas fa-tshirt"></i>
                     </a>
                 </div>
@@ -64,10 +64,10 @@
                         <i class="fas fa-trash"></i>
                     </a>
                     <a style="float: right; margin-left: 10px"
-                        data-equip
-                        data-item-id="{{ item._id }}"
-                        class="item-control"
-                        title="Equip an armor">
+                       data-equip
+                       data-item-id="{{ item._id }}"
+                       class="item-control"
+                       title="Equip an armor">
                         <i class="fas fa-tshirt"></i>
                     </a>
                 </div>
@@ -76,6 +76,7 @@
             {{/each}}
         </td>
     </tr>
+    {{> "systems/arcane-arcade-fallout/templates/actor/items/ammo.hbs" ammos=ammos}}
 </table>
 
 <table class="backpack">
@@ -84,37 +85,43 @@
             <table class="equipped-stats">
                 <tr><td colspan="999"><h3>Food and Drinks</h3></td></tr>
                 <div>
-                <tr><td>Name</td><td>Qty</td><td>Properties</td><td></td></tr>
+                <tr><td>Name</td><td style="width:80px;">Qty</td><td>Properties</td><td></td></tr>
                 {{#each foodAnddrinks as |item id|}}
-                <tr>
-                    <td style="width: 100px">
-                        <a class="item-control"
-                           data-edit
-                           data-item-id="{{ item._id }}"
-                           title="{{localize 'DOCUMENT.Update' type='item'}}">
-                            {{ item.name }}
-                        </a>
-                    </td>
-                    <td>
-                        <i style="padding:3px;" data-itemsubtraction data-item="{{item._id}}" class="fas fa-minus-square"></i>
-                        {{ system.quantity }}
-                        <i style="padding:3px;" data-itemaddition data-item="{{item._id}}" class="fas fa-plus-square"></i>
-                    </td>
+            <tr>
+                <td style="width: 100px">
+                    <a class="item-control"
+                       data-edit
+                       data-item-id="{{ item._id }}"
+                       title="{{localize 'DOCUMENT.Update' type='item'}}">
+                        {{ item.name }}
+                    </a>
+                </td>
+                <td>
+                    <i style="padding:3px;" data-itemsubtraction data-item="{{item._id}}" class="fas fa-minus-square"></i>
+                    {{ system.quantity }}
+                    <i style="padding:3px;" data-itemaddition data-item="{{item._id}}" class="fas fa-plus-square"></i>
+                </td>
 
-                    <td data-properties="{{item.system.description}}">
-                        {{{ item.system.description }}}
-                    </td>
-                    <td class="td-controls" style="padding:0px;margin:0px;">
-                        <li class="item flexrow" data-item-id="{{ item._id }}">
-                            <div class="item-controls">
-                                <a class="item-control item-delete"
-                                   title="{{localize 'DOCUMENT.Delete' type='item'}}">
-                                    <i class="fas fa-trash"></i>
-                                </a>
-                            </div>
-                        </li>
-                    </td>
-                </tr>
+                <td data-properties="{{item.system.description}}">
+                    {{{ item.system.description }}}
+                </td>
+                <td class="item-control">
+                    <span {{#GreaterThan item.system.quantity 1}}
+                          data-rollable
+                          data-lowerInventory="{{item._id}}"
+                          {{/GreaterThan}}>
+                        <i title="Eat/Drink" class="fas fa-drumstick-bite fakebutton nobackground"></i>
+                    </span>
+                    <li class="item flexrow" data-item-id="{{ item._id }}">
+                        <div class="item-controls">
+                            <a class="item-control item-delete"
+                               title="{{localize 'DOCUMENT.Delete' type='item'}}">
+                                <i class="fas fa-trash"></i>
+                            </a>
+                        </div>
+                    </li>
+                </td>
+            </tr>
                 {{/each}}
             </table>
             </div><br />
@@ -140,7 +147,13 @@
                     <td>
                         {{{ item.system.description }}}
                     </td>
-                    <td class="td-controls">
+                    <td class="item-control">
+                        <span {{#GreaterThan item.system.quantity 1}}
+                              data-rollable
+                              data-lowerInventory="{{item._id}}"
+                              {{/GreaterThan}}>
+                            <i title="Use Chem" class="fas fa-syringe fakebutton nobackground"></i>
+                            </span>
                         <li class="item flexrow" data-item-id="{{ item._id }}">
                             <div class="item-controls">
                                 <a class="item-control item-delete"
@@ -158,7 +171,7 @@
             <div>
                 <table class="equipped-stats">
                     <tr><td colspan=999><h3>MISC ITEMS</h3></td></tr>
-                    <tr><td>Name</td><td>Qty</td><td></td></tr>
+                    <tr><td>Name</td><td style="width:80px">Qty</td><td></td></tr>
                     {{#each miscItems as |item id|}}
                     <tr>
                         <td class="item-label">
