--- a/templates/actor/dialog/attack.hbs
+++ b/templates/actor/dialog/attack.hbs
@@ -1,7 +1,121 @@
 <form autocomplete="off">
+  <div class="form-group">
+    <fieldset>
+      <legend>Bonuses / Penalties</legend>
+      <div class="flex space-between">
+        <div>Skill Bonus:</div>
+        <div>{{ skillBonus }}</div>
+      </div>
+      <div class="flex space-between">
+        <div>Ability Bonus:</div>
+        <div>{{ abilityBonus }}</div>
+      </div>
+      <div class="flex space-between">
+        <div>Decay Penalty:</div>
+        <div>{{ decayPenalty }}</div>
+      </div>
+      <div class="flex space-between">
+        <div>Luck:</div>
+        <div>{{ actorLuck }}</div>
+      </div>
+      <div class="flex space-between">
+        <div>Penalties:</div>
+        <div>{{ actorPenalties }}</div>
+      </div>
+    </fieldset>
+  </div>
+  <div class="form-group">
+    <fieldset>
+      <legend>Select normal / advantage / disadvantage</legend>
+      <div>
+        <input
+          type="radio"
+          id="normal"
+          name="advantageMode"
+          value="1"
+          {{{setChecked
+          advantageMode
+          1}}}
+        />
+        <label for="normal">Normal</label>
+      </div>
+      <div>
+        <input
+          type="radio"
+          id="advantage"
+          name="advantageMode"
+          value="2"
+          {{{setChecked
+          advantageMode
+          2}}}
+        />
+        <label for="advantage">Advantage</label>
+      </div>
+      <div>
+        <input
+          type="radio"
+          id="disadvantage"
+          name="advantageMode"
+          value="3"
+          {{{setChecked
+          advantageMode
+          3}}}
+        />
+        <label for="disadvantage">Disadvantage</label>
+      </div>
+      <div data-tooltip="Target beyond long range, Nat 20 required to hit">
+        <input
+          type="radio"
+          id="hailmary"
+          name="advantageMode"
+          value="4"
+          {{{setChecked
+          advantageMode
+          4}}}
+        />
+        <label for="hailmary">Hail Mary!</label>
+      </div>
+    </fieldset>
+  </div>
+  <div class="form-group">
+    <label for="bonus">Situational bonus</label>
+    <input type="text" name="bonus" value="{{ bonus }}" placeholder="1d4" />
+  </div>
+  <div class="form-group">
+    {{#unless targeted}}
+    <button type="button" data-add-target>Add Target</button>
+    {{else}}
+    <div class="targeted flex">
+      <div>
+        <div>Target: {{ targeted }}</div>
+      </div>
+      <div>
+        <button type="button" data-remove-target><i class="fas fa-trash"></i></button>
+      </div>
+    </div>
+    {{/unless}}
+  </div>
+</form>
+
+<div class="dialog-buttons flex">
+  <button>Cancel</button>
+  <button>Roll</button>
+</div>
+
+    {{!-- NOT SURE HOW TO ADD THIS --}}
+
+    {{!-- {{ log 'here' content.options.mode}}
     <div class="form-group">
-        <label for="bonus">Situational bonus</label>
-        <input type="text" name="bonus" value="" placeholder="1d4"/>
+        <label for="bonus">Roll Modifiers:</label>
+        <input title="Modify the roll based on the situation:
+               2 = will add 2
+               -2 = will subtract 2
+               1d4 = will add 1d4
+               -1d4 = will subtract 1d4
+               1d4 + 1d6 = will add both a 1d4 and 1d6 to your roll
+               1d20kh = will roll an extra dice at advantage
+               1d20kl = will roll an extra dice at disadvantage
+Full Example: 2d10 - 5 + 2d20kh + 1d4kl" type="text" name="bonusDice" value="" placeholder=" Bonus or Penalties"/>
     </div>
     <div class="form-group">
         <fieldset>
@@ -24,10 +138,19 @@
         </div>
     </div>
     <div>
-    <div class="form-group">
-        <label>Targeted attack?</label>
-        <input type="checkbox" name="targeted" value="false" placeholder="1d4"/>
-    </div>
+        <div class="form-group" style="text-align:right;">
+            <table style="background:none;border:none;">
+                <tr style="background:none;border:none;">
+                    <td><label>Targeted Attack: </label></td>
+                    <td><input type="checkbox" name="targeted" value="false" /></td>
+                </tr>
+                <tr style="background:none;border:none;">
+                    <td><label>Free Attack: </label></td>
+                    <td><input type="checkbox" name="freeAttack" value="false" /></td>
+                </tr>
+            </table>
+
+</div>
 </form>
 
 <div class="dialog-buttons">
@@ -37,4 +160,4 @@
         {{{button.label}}}
     </button>
     {{/each}}
-</div>
+</div> --}}
