fix roll prompt click

--- a/templates/actor/dialog/attack.hbs
+++ b/templates/actor/dialog/attack.hbs
@@ -95,12 +95,12 @@
     </div>
     {{/unless}}
   </div>
-</form>
 
 <div class="dialog-buttons flex">
-  <button>Cancel</button>
-  <button>Roll</button>
+  <button data-close>Cancel</button>
+  <button type="submit">Roll</button>
 </div>
+</form>
 
     {{!-- NOT SURE HOW TO ADD THIS --}}
 
