--- a/templates/item/item-explosive-sheet.hbs
+++ b/templates/item/item-explosive-sheet.hbs
@@ -1,13 +1,13 @@
 <form class="{{ cssClass }}" autocomplete="off">
-    <header class="sheet-header">
-        <img class="profile-img" src="{{ item.img }}" data-edit="img" title="{{ item.name }}" />
-        <div class="header-fields">
-            <h1 class="charname">
-                <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
-            </h1>
-            Equipped: <input type="checkbox" name="system.itemEquipped" {{checked system.itemEquipped}} />
-        </div>
-    </header>
+  <header class="sheet-header">
+    <img class="profile-img" src="{{ item.img }}" data-edit="img" title="{{ item.name }}" />
+    <div class="header-fields">
+      <h1 class="charname">
+        <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
+      </h1>
+      Equipped: <input type="checkbox" name="system.itemEquipped" {{checked system.itemEquipped}} />
+    </div>
+  </header>
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
@@ -19,7 +19,7 @@
       <td>Cost</td>
       <td>Load</td>
       <td>Qty</td>
-      <td><button class="useAP" data-apUsed="{{system.apCost}}">AP</button></td>	  
+      <td><button class="useAP" data-apused="{{ system.apCost }}">AP</button></td>
       <td>Range</td>
       <td>Arm DC</td>
     </tr>
@@ -29,34 +29,35 @@
       <td><input type="number" name="system.quantity" value="{{ system.quantity }}" /></td>
       <td><input type="number" name="system.apCost" value="{{ system.apCost }}" /></td>
       <td><input type="number" name="system.range" value="{{ system.range }}" /></td>
-      <td><input type="text" name="system.armDC" value="{{ system.armDC }}" /></td>	  
+      <td><input type="text" name="system.armDC" value="{{ system.armDC }}" /></td>
     </tr>
-	</table>
-	<br> 
-	<table class="equipped-stats">
-	<tr><td colspan=999>Damage Calculation</td>
-	<tr>
-	    <td>Area of Effect</td>
-        <td>Dmg 1</td>
-        <td>DMG Type1</td>
-        <td>DMG 2</td>
-        <td>DMG Type 2</td>
-	</tr>
-	<tr>
-	  <td><input type="text" name="system.aoeRadius" value="{{ system.aoeRadius }}" />
+  </table>
+  <br />
+  <table class="equipped-stats">
+    <tr>
+      <td colspan="999">Damage Calculation</td>
+    </tr>
+    <tr>
+      <td>Area of Effect</td>
+      <td>Dmg 1</td>
+      <td>DMG Type1</td>
+      <td>DMG 2</td>
+      <td>DMG Type 2</td>
+    </tr>
+    <tr>
+      <td><input type="text" name="system.aoeRadius" value="{{ system.aoeRadius }}" /></td>
       <td><input type="text" name="system.damage1" value="{{ system.damage1 }}" /></td>
       <td><input type="text" name="system.damageType1" value="{{ system.damageType1 }}" /></td>
       <td><input type="text" name="system.damage2" value="{{ system.damage2 }}" /></td>
-      <td><input type="text" name="system.damageType2" value="{{ system.damageType2 }}" /></td>	  
-	</tr>
-	</table>	  
-
+      <td><input type="text" name="system.damageType2" value="{{ system.damageType2 }}" /></td>
+    </tr>
+  </table>
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     {{!-- Description Tab --}}
-    <div class="tab" data-group="primary" data-tab="description" style="padding:20px;">
-		{{editor system.properties target="system.properties" button=true engine="prosemirror"}}
+    <div class="tab" data-group="primary" data-tab="description" style="padding: 20px">
+      {{editor system.properties target="system.properties" button=true engine="prosemirror"}}
     </div>
     {{!-- Effects Tab --}}
     <div class="tab effects" data-group="primary" data-tab="effects">
