add custom chat card

--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -4,6 +4,7 @@
 @import 'grant.css';
 @import 'attack-roll.css';
 @import 'targeted-attack.css';
+@import 'chat.css';
 
 /* Global styles */
 @font-face {
