--- a/templates/actor/dialog/attack.hbs
+++ b/templates/actor/dialog/attack.hbs
@@ -26,16 +26,14 @@
   </div>
   <div class="form-group">
     <fieldset>
-      <legend>Select normal / advantage / disadvantage</legend>
+      <legend>Select Normal / Advantage / Disadvantage</legend>
       <div>
         <input
           type="radio"
           id="normal"
           name="advantageMode"
           value="1"
-          {{{setChecked
-          advantageMode
-          1}}}
+          {{{setChecked advantageMode  1}}}
         />
         <label for="normal">Normal</label>
       </div>
@@ -45,9 +43,7 @@
           id="advantage"
           name="advantageMode"
           value="2"
-          {{{setChecked
-          advantageMode
-          2}}}
+          {{{setChecked advantageMode 2}}}
         />
         <label for="advantage">Advantage</label>
       </div>
@@ -57,9 +53,7 @@
           id="disadvantage"
           name="advantageMode"
           value="3"
-          {{{setChecked
-          advantageMode
-          3}}}
+          {{{setChecked advantageMode  3}}}
         />
         <label for="disadvantage">Disadvantage</label>
       </div>
@@ -69,9 +63,7 @@
           id="hailmary"
           name="advantageMode"
           value="4"
-          {{{setChecked
-          advantageMode
-          4}}}
+          {{{setChecked  advantageMode  4}}}
         />
         <label for="hailmary">Hail Mary!</label>
       </div>
