--- a/templates/actor/parts/actor-notes.hbs
+++ b/templates/actor/parts/actor-notes.hbs
@@ -2,7 +2,7 @@
 <table>
     <tr>
         <td style="background:#222;height: 400px; text-align: left; padding: 10px">
-            {{editor system.properties target="system.properties" rollData=rollData button=true owner=owner editable=editable engine="prosemirror"}}
+            {{{editor system.properties target="system.properties" rollData=rollData button=true owner=owner editable=editable}}}
         </td>
     </tr>
 </table>
