--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -53,7 +53,7 @@
       <a class="item" data-tab="backpack">BACKPACK</a>
       <a class="item" data-tab="crafting">CRAFTING</a>
       <a class="item" data-tab="notes">NOTES</a>
-      {{#GM}}<a class="item" data-tab="effects">EFFECTS</a>{{/GM}}
+      <a class="item" data-tab="effects">EFFECTS</a>
     </nav>
 
     {{!-- Sheet Body --}}
@@ -135,12 +135,10 @@
       <div class="tab notes" data-group="primary" data-tab="notes">
         {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-notes.hbs"}}
       </div>
-      {{#GM}}
       {{!-- Effects Tab --}}
       <div class="tab effects" data-group="primary" data-tab="effects">
         {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-effects.hbs"}}
       </div>
-      {{/GM}}
     </section>
   </div>
 </form>
