--- a/css/chat.css
+++ b/css/chat.css
@@ -63,3 +63,7 @@
 .chat-sidebar .message-content .card-buttons {
   margin-top: 10px;
 }
+
+.chat-sidebar .message-content .card-buttons button:not(:first-of-type) {
+  margin-top: 10px;
+}
