Finished Power Upgrades
Finished functionality for Power Armor Upgrades.

--- a/templates/item/item-powerArmor-sheet.hbs
+++ b/templates/item/item-powerArmor-sheet.hbs
@@ -34,7 +34,7 @@
             </td>
             <td>
               <button style ="max-width:fit-content;text-align:left" class="fakeButton" addUpgradeBtn id="addUpgradeBtn">ADD</button>
-                <select name="upgradesSelector" id="upgradesSelector">
+                <select name="upgradesSelector" data-armorType="powerArmor" id="upgradesSelector">
                   <option value="Upgrades">Upgrades</option>
               </select>
             </td>
